[tool.poetry]
name = "dad-gym-env"
version = "0.1.0"
description = ""
authors = ["beapen <github@gulfdoctor.net>"]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/dermatologist/dad-gym-env"
homepage = "https://github.com/dermatologist/dad-gym-env"

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "3.4.4.19"
scipy = "1.3.2"
gym = "^0.15.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
